tests/expectations/compiler/function/duplicate_function_name_fail.out
Error [EAST0372017]: The name `foo` is defined multiple times.
    --> compiler-test:11:4
     |
   7 |   fn foo() -> u32 {
     |      ^^^ previous definition of `foo` here
   ...
  11 |   fn foo() -> u32 {
     |      ^^^ `foo` redefined here
